# Loofah-SC-Percolation-Sim

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  requirements.txt  setup.cfg
configs/: base_config.json  paper_nominal.json  paper_small_fast.json  sweep_recipe.json
data/: README.md
docs/: FIGURE_MAP.md  RANDOMNESS.md  README.md
notebooks/: 00_Colab_Setup.ipynb  01_Scaffold_Generation.ipynb  02_Coating_and_Percolation.ipynb  03_Transport_and_Ic.ipynb  04_Parameter_Sweep.ipynb
results/: README.md  percolation_sweep.csv
scripts/: make_one_case.py  run_sweep.py
src/loofah_sc_sim/: cli.py  coating.py  config.py  geometry.py  io.py  metrics.py  percolation.py  transport.py
tests/: test_percolation.py  test_transport.py
