[metadata]
name = loofah-sc-sim
version = 0.1.0
author = Antonios Valamontes
author_email = REPLACE_WITH_EMAIL_OR_REMOVE
description = Simulation-first percolation workflow for loofah-templated biomorphic carbon superconducting composites
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    networkx
    pyyaml
    matplotlib

[options.packages.find]
where = src
